services: add version support
