# services/api/docs/swagger.json
@@ -2255,6 +2255,35 @@
                 }
             }
         },
+        "/system/release": {
+            "get": {
+                "description": "Get Dashboard current and latest release",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "System"
+                ],
+                "summary": "Get Dashboard the current and latest release",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/system.DashboardRelease"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/request.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/system/setup": {
             "post": {
                 "description": "Setup user and system config",
@@ -4305,6 +4334,21 @@
                     "minLength": 4
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "system.DashboardRelease": {
+            "type": "object",
+            "required": [
+                "current",
+                "latest"
+            ],
+            "properties": {
+                "current": {
+                    "type": "string"
+                },
+                "latest": {
                     "type": "string"
                 }
             }
